--- a/src/app/pages/maps/maps.component.html
+++ b/src/app/pages/maps/maps.component.html
@@ -6,7 +6,9 @@
         Google Maps
       </div>
       <div class="card-body ">
-        <div id="map" class="map"></div>
+        <div id="map" class="map">
+
+        </div>
       </div>
     </div>
   </div>
