--- a/src/app/pages/notifications/notifications.component.html
+++ b/src/app/pages/notifications/notifications.component.html
@@ -76,8 +76,8 @@
                   <span>
                     <b> Warning - </b> This is a regular notification made with ".alert-warning"</span>
                 </div>
-                <div class="alert alert-danger alert-dismissible fade show">
-                  <button type="button" aria-hidden="true" class="close" data-dismiss="alert" aria-label="Close">
+                <div class="alert alert-danger alert-dismissible fade show" id  = 'alert'>
+                  <button type="button" aria-hidden="true" class="close" data-dismiss="alert" aria-label="Close" >
                     <i class="nc-icon nc-simple-remove"></i>
                   </button>
                   <span>
